<resources>
    <string name="app_name">Tasks2Do</string>

    <!--words-->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="removed">Removed</string>
    <string name="close">Close</string>

    <!--phrases-->
    <string name="newtask">Create Task:</string>
    <string name="edittask">Edit Task:</string>
    <string name="taskdetails">Details:</string>
    <string name="taskdescription">Description:</string>
    <string name="invalidinput">Invalid Input!</string>

    <!--formats-->
    <string name="format_date">dd.MM.yyyy</string>
    <string name="format_time">HH:mm</string>

</resources>